basalt/src/snapshots/basalt_tui__search_explorer__tests__empty_search.snap
---
source: basalt/src/search_explorer.rs
expression: terminal.backend()
---
"╭ Search ─────────────────────────╮"
"│ Type to search...               │"
"├─────────────────────────────────┤"
"│                                 │"
"│                                 │"
"│                                 │"
"│                                 │"
"│                                 │"
"│                                 │"
"╰─────────────────────────────────╯"
