basalt/src/snapshots/basalt_tui__search_explorer__tests__navigate_mode.snap
---
source: basalt/src/search_explorer.rs
expression: terminal.backend()
---
"╭ Search ─────────────────────────╮"
"│ In                              │"
"├─────────────────────────────────┤"
"│   Index                         │"
"│   Indigo                        │"
"│   Induction Tape                │"
"│   Meeting Notes                 │"
"│                                 │"
"│                                 │"
"╰─────────────────────────────────╯"
