basalt/src/snapshots/basalt_tui__search_explorer__tests__no_results.snap
---
source: basalt/src/search_explorer.rs
expression: terminal.backend()
---
"╭ Search ─────────────────────────╮"
"│ zzz                             │"
"├─────────────────────────────────┤"
"│ No results                      │"
"│                                 │"
"│                                 │"
"│                                 │"
"│                                 │"
"│                                 │"
"╰─────────────────────────────────╯"
