basalt/src/snapshots/basalt_tui__search_explorer__tests__with_query.snap
---
source: basalt/src/search_explorer.rs
expression: terminal.backend()
---
"╭ Search ─────────────────────────╮"
"│ Ind                             │"
"├─────────────────────────────────┤"
"│   Index                         │"
"│   Indigo                        │"
"│   Induction Tape                │"
"│                                 │"
"│                                 │"
"│                                 │"
"╰─────────────────────────────────╯"
